      create_volume_snapshot) (LIBCLOUD-409)
      [Oleg Suharev]

    - Add the following new extension methods to EC2 driver: ex_destroy_image,
      ex_modify_instance_attributes, ex_delete_keypair. (LIBCLOUD-409)
      [Oleg Suharev]

    - Allow user to specify a port range when creating a port forwarding rule.
      (LIBCLOUD-409)
      [Oleg Suharev]

  *) Storage

    - Deprecate CLOUDFILES_US and CLOUDFILES_UK provider constant and replace
      it with a new CLOUDFILES constant.
      Driver referenced by this new constant takes a "region" keyword argument
      which can be one of 'ord', 'dfw', 'iad', 'syd', 'lon'.

      Note: Deprecated constants will continue to work for the foreseeable
      future.
      For more information on this change, please visit "Upgrade Notes"
      documentation section - http://s.apache.org/lc0140un
      [Tomaz Muraus]

    - Allow users to filter objects starting with a prefix by passing ex_prefix
      argument to the list_container_objects method in the S3, Google Storage
      and CloudFiles driver. (LIBCLOUD-369)
      [Stefan Friesel]

    - Fix an issue with mutating connectionCls.host attribute in the Azure
      driver. This bug prevented user from having multiple Azure drivers with
      different keys instantiated at the same time. (LIBCLOUD-399)
      [Olivier Grisel]

 *) Load Balancer

    - Deprecate RACKSPACE_US and RACKSPACE_UK provider constant and replace it
      with a new RACKSPACE constant.
      Driver referenced by this new constant takes a "region" keyword argument
      which can be one of the following: 'ord', 'dfw', 'iad', 'syd', 'lon'.

      Note: Deprecated constants will continue to work for the foreseeable
      future.
      For more information on this change, please visit "Upgrade Notes"
      documentation section - http://s.apache.org/lc0140un
      [Tomaz Muraus]

    - Add new driver for Google Compute Engine (LIBCLOUD-386)
      [Rick Wright]

 *) DNS
